Fixed client comments

--- a/all-projects.html
+++ b/all-projects.html
@@ -118,14 +118,14 @@
                                     <a href="project/nszu" class="project__text"> National Health Service of Ukraine, Kyiv </a>
                                 </div>
                             </div>
-                            <div class="project__leleka project__content healthcare">
+                            <div class="project__nova-kakhovka project__content public">
                                 <div class="project__img">
-                                    <a href="project/leleka"><img src="assets/pic/02_leleka/front-leleka.jpg" class="project__photo-hover"></a>
-                                    <a href="project/leleka"><img src="assets/pic/02_leleka/front-leleka-bw.jpg" class="project__photo"></a>
-                                </div>   
+                                    <a href="project/nova-kakhovka"><img src="assets/pic/05_nova_kakhovka/front-cnap.jpg" class="project__photo-hover"></a>
+                                    <a href="project/nova-kakhovka"><img src="assets/pic/05_nova_kakhovka/front-cnap-bw.jpg" class="project__photo"></a>
+                                </div> 
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="project/leleka" class="project__text"> Maternity home "Leleka", Kyiv </a>
+                                    <a href="project/nova-kakhovka" class="project__text"> Center of Government Services, Nova-Kakhovka </a>
                                 </div>
                             </div>
                             <div class="project__aquapark project__content leisure">
@@ -148,14 +148,14 @@
                                     <a href="project/school-brovary" class="project__text"> Primary school, Brovary </a>
                                 </div>
                             </div>
-                            <div class="project__nova-kakhovka project__content public">
+                            <div class="project__leleka project__content healthcare">
                                 <div class="project__img">
-                                    <a href="project/nova-kakhovka"><img src="assets/pic/05_nova_kakhovka/front-cnap.jpg" class="project__photo-hover"></a>
-                                    <a href="project/nova-kakhovka"><img src="assets/pic/05_nova_kakhovka/front-cnap-bw.jpg" class="project__photo"></a>
-                                </div> 
+                                    <a href="project/leleka"><img src="assets/pic/02_leleka/front-leleka.jpg" class="project__photo-hover"></a>
+                                    <a href="project/leleka"><img src="assets/pic/02_leleka/front-leleka-bw.jpg" class="project__photo"></a>
+                                </div>   
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="project/nova-kakhovka" class="project__text"> Center of Government Services, Nova-Kakhovka </a>
+                                    <a href="project/leleka" class="project__text"> Maternity home "Leleka", Kyiv </a>
                                 </div>
                             </div>
                             <div class="project__zirochka project__content education">
@@ -458,14 +458,14 @@
                                     <a href="project/warning" class="project__text"> Secondary school, Kyiv </a>
                                 </div>
                             </div>
-                            <div class="project__school-peremogy project__content education">
+                            <div class="project__espresso project__content public">
                                 <div class="project__img">
-                                    <a href="project/warning"><img src="assets/pic/35_rokosovskoho/front-rokosovskoho.jpg" class="project__photo-hover"></a>
-                                    <a href="project/warning"><img src="assets/pic/35_rokosovskoho/front-rokosovskoho-bw.jpg" class="project__photo"></a>
+                                    <a href="project/warning"><img src="assets/pic/36_espresso/front-espresso.jpg" class="project__photo-hover"></a>
+                                    <a href="project/warning"><img src="assets/pic/36_espresso/front-espresso-bw.jpg" class="project__photo"></a>
                                 </div>                                
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="project/warning" class="project__text"> Secondary school, Kyiv </a>
+                                    <a href="project/warning" class="project__text"> Office building "Espreso.tv", Kyiv </a>
                                 </div>
                             </div>
                             <div class="project__domino project__content interrior">
