--- a/project/leleka.html
+++ b/project/leleka.html
@@ -102,14 +102,14 @@
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
                                         <div>
-                                            <img src="../assets/pic/02_leleka/slider/02_3.jpg" alt="">
+                                            <img src="../assets/pic/02_leleka/slider/02_3.png" alt="">
                                         </div>
                                     </div>                          
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
                                         <div>
-                                            <img src="../assets/pic/02_leleka/slider/02_4.jpg" alt="">
+                                            <img src="../assets/pic/02_leleka/slider/02_4.png" alt="">
                                         </div>
                                     </div>                          
                                 </div>
@@ -166,6 +166,20 @@
                                     <div class="image-slider__image">
                                         <div>
                                             <img src="../assets/pic/02_leleka/slider/02_12.jpg" alt="">
+                                        </div>
+                                    </div>                          
+                                </div>
+                                <div class="image-slider__slide swiper-slide">
+                                    <div class="image-slider__image">
+                                        <div>
+                                            <img src="../assets/pic/02_leleka/slider/02_13.jpg" alt="">
+                                        </div>
+                                    </div>                          
+                                </div>
+                                <div class="image-slider__slide swiper-slide">
+                                    <div class="image-slider__image">
+                                        <div>
+                                            <img src="../assets/pic/02_leleka/slider/02_14.jpg" alt="">
                                         </div>
                                     </div>                          
                                 </div>
