--- a/project/nszu.html
+++ b/project/nszu.html
@@ -106,8 +106,8 @@
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
-                                        <img src="../assets/pic/01_nszu/slider/01_4.png" alt="" >
-                                    </div>                                
+                                        <img src="../assets/pic/01_nszu/slider/01_4.jpg" alt="" >
+                                    </div>
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
@@ -126,12 +126,17 @@
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
+                                        <img src="../assets/pic/01_nszu/slider/01_8.png" alt="" >
+                                    </div>                                
+                                </div>
+                                <div class="image-slider__slide swiper-slide">
+                                    <div class="image-slider__image">
                                         <img src="../assets/pic/01_nszu/slider/01_9.png" alt="" >
                                     </div>                                
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
-                                        <img src="../assets/pic/01_nszu/slider/01_10.jpg" alt="" >
+                                        <img src="../assets/pic/01_nszu/slider/01_10.png" alt="" >
                                     </div>                                
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
@@ -166,7 +171,7 @@
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
-                                        <img src="../assets/pic/01_nszu/slider/01_17.gif" alt="" >
+                                        <img src="../assets/pic/01_nszu/slider/01_17.jpg" alt="" >
                                     </div>                                
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
@@ -176,7 +181,7 @@
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
-                                        <img src="../assets/pic/01_nszu/slider/01_19.gif" alt="" >
+                                        <img src="../assets/pic/01_nszu/slider/01_19.jpg" alt="" >
                                     </div>                                
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
@@ -191,7 +196,7 @@
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
-                                        <img src="../assets/pic/01_nszu/slider/01_22.gif" alt="" >
+                                        <img src="../assets/pic/01_nszu/slider/01_22.jpg" alt="" >
                                     </div>                                
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
@@ -211,7 +216,7 @@
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
-                                        <img src="../assets/pic/01_nszu/slider/01_26.jpg" alt="" >
+                                        <img src="../assets/pic/01_nszu/slider/01_26.gif" alt="" >
                                     </div>                                
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
@@ -221,7 +226,7 @@
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
-                                        <img src="../assets/pic/01_nszu/slider/01_28.jpg" alt="" >
+                                        <img src="../assets/pic/01_nszu/slider/01_28.gif" alt="" >
                                     </div>                                
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
@@ -236,7 +241,7 @@
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
-                                        <img src="../assets/pic/01_nszu/slider/01_31.png" alt="" >
+                                        <img src="../assets/pic/01_nszu/slider/01_31.gif" alt="" >
                                     </div>                                
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
@@ -247,6 +252,51 @@
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
                                         <img src="../assets/pic/01_nszu/slider/01_33.jpg" alt="" >
+                                    </div>                                
+                                </div>
+                                <div class="image-slider__slide swiper-slide">
+                                    <div class="image-slider__image">
+                                        <img src="../assets/pic/01_nszu/slider/01_34.jpg" alt="" >
+                                    </div>                                
+                                </div>
+                                <div class="image-slider__slide swiper-slide">
+                                    <div class="image-slider__image">
+                                        <img src="../assets/pic/01_nszu/slider/01_35.jpg" alt="" >
+                                    </div>                                
+                                </div>
+                                <div class="image-slider__slide swiper-slide">
+                                    <div class="image-slider__image">
+                                        <img src="../assets/pic/01_nszu/slider/01_36.jpg" alt="" >
+                                    </div>                                
+                                </div>
+                                <div class="image-slider__slide swiper-slide">
+                                    <div class="image-slider__image">
+                                        <img src="../assets/pic/01_nszu/slider/01_37.jpg" alt="" >
+                                    </div>                                
+                                </div>
+                                <div class="image-slider__slide swiper-slide">
+                                    <div class="image-slider__image">
+                                        <img src="../assets/pic/01_nszu/slider/01_38.jpg" alt="" >
+                                    </div>                                
+                                </div>
+                                <div class="image-slider__slide swiper-slide">
+                                    <div class="image-slider__image">
+                                        <img src="../assets/pic/01_nszu/slider/01_39.jpg" alt="" >
+                                    </div>                                
+                                </div>
+                                <div class="image-slider__slide swiper-slide">
+                                    <div class="image-slider__image">
+                                        <img src="../assets/pic/01_nszu/slider/01_40.png" alt="" >
+                                    </div>                                
+                                </div>
+                                <div class="image-slider__slide swiper-slide">
+                                    <div class="image-slider__image">
+                                        <img src="../assets/pic/01_nszu/slider/01_41.jpg" alt="" >
+                                    </div>                                
+                                </div>
+                                <div class="image-slider__slide swiper-slide">
+                                    <div class="image-slider__image">
+                                        <img src="../assets/pic/01_nszu/slider/01_42.jpg" alt="" >
                                     </div>                                
                                 </div>
                             </div> 
