Fixed texts in about us page

--- a/about-us.html
+++ b/about-us.html
@@ -111,27 +111,29 @@
                     <div class="section-wrapper info" >
                         <div class="info__paragraphs">
                             <div class="par-group">
-                                <p class="par"> <span> "Anna Kyrii Architectural and Design Group" company </span> was founded in 2008.</p>
-                                <p class="par">We work as a General Designer and create for our clients all types of project documentation. In our architectural decisions, we are guided by the principles of contemporary architecture. We always find and offer the best solution that improves our clients’ business and solve their business tasks. Our global goal is to make projects that build Ukraine.</p>
+                                <p class="par"> We are Ukrainian architectural company <span> "Anna Kyrii Architectural Projecting Group" </span> from Kyiv. Our company was founded in 2008. </p>
+                                <p class="par">We have over 14 years of experience in full cycle architectural design. We work with a real sector, commercials, funds, international, municipal and government organizations as a General designer and create for our clients all types of project documentation. In our architectural decisions we are guided by the principles of contemporary architecture. We always find and offer the best solution that improves our clients’ business and solve their business tasks. </p>
+                                <p class="par"> <span>Our global goal is to make projects that build Ukraine.</span> Our mission is Ukraine that open to the World, which can be proud of the aesthetics of its space and modern breakthrough solutions in architecture.</p>
                             </div> 
                             <div class="par-group">
                                 <p class="par"><span>The company specializes </span> in development of the following types of work:</p>
-                                <p class="par">- Consulting on any issues related to the process of design and development of architectural objects;</p>
-                                <p class="par">- Development of concepts with the analysis of limit parameters of building and risk-map;</p>
-                                <p class="par">- Finding the best architectural and engineering solutions for the task;</p>
-                                <p class="par">- Project documentation: Pre-project, Schematic Design, Project, Work Project and Working Documentation;</p>
-                                <p class="par">- Author's supervision of construction.</p>
+                                <p class="par">- consulting on any issues related to the process of design and development of architectural objects;</p>
+                                <p class="par">- development of concepts with the analysis of limit parameters of building and risk-map;</p>
+                                <p class="par">- finding the best architectural and engineering solutions for the task;</p>
+                                <p class="par">- creation project documentation: Pre-project, Schematic design, Project, Work project and Working documentation;</p>
+                                <p class="par">- author's supervision of construction.</p>
+                                <p class="par"> Our main skill is to create objects from idea to completed construction.</p>
                             </div>
                             <div class="par-group">
                                 <p class="par"> <span>The list of projects developed by our company includes above 260 projects</span> in such categories: public buildings, housing, office buildings and business centers, multifunctional complexes, healthcare, schools, kindergartens, leisure centers, cottage towns, interiors of public spaces.</p>
                             </div>
                             <div class="par-group">
                                 <p class="par"><span>What we don’t do</span></p>
-                                <p class="par">for the interior design projects of private houses and apartments it is better to contact another company, we will be happy to give recommendations. Our specialists are focused on solving business tasks.</p>
+                                <p class="par">For the interior design projects of private houses and apartments it is better to contact another company We will be happy to give recommendations. Our specialists are focused on solving business tasks.</p>
                             </div>                            
                             <div class="par-group">
-                                <p class="par"><span>Team:</span></p>
-                                <p class="par">All the people working in the company are talented individuals and high-level specialists in their field. They are architects with qualifications certificates, designers and management. The company works closely with specialists and organizations of engineering specialties, involving them in the development of project documentation as subcontractors. We are proud of a team that is able to create and implement large-scale and important projects for Ukraine. </p>
+                                <p class="par"><span>Team</span></p>
+                                <p class="par">All the people working in the company are talented individuals and high-level specialists in their field. They are architects with qualifications certificates, designers and managers. The company works closely with specialists and organizations of engineering specialties, involving them in the development of project documentation as subcontractors. We are proud of a team that is able to create and implement large-scale and important projects for Ukraine. </p>
                             </div>
                         </div>
                     </div>
