Started adding ukrainian language to about us page

--- a/en/about-us.html
+++ b/en/about-us.html
@@ -7,15 +7,15 @@
     <meta name="description" content="Anna Kyrii Architectural Projecting Group">
     <meta name="keywords" content="architecture, project, projects, Anna Kyrii, architect, architectural group, architectural design">
     <meta name="author" content="Anna Kyrii Architectural Projecting Group">
-    <link rel="stylesheet" href="assets/style/preloader.css">
-    <link rel="stylesheet" href="assets/style/normalize.css">
-    <link rel="stylesheet" href="assets/style/style.css"> 
-     <link rel="stylesheet" href="assets/style/style_projects.css"> 
-     <link rel="stylesheet" href="assets/style/style_about-us.css"> 
-     <link rel="stylesheet" href="assets/style/media.css"> 
+    <link rel="stylesheet" href="../assets/style/preloader.css">
+    <link rel="stylesheet" href="../assets/style/normalize.css">
+    <link rel="stylesheet" href="../assets/style/style.css"> 
+     <link rel="stylesheet" href="../assets/style/style_projects.css"> 
+     <link rel="stylesheet" href="../assets/style/style_about-us.css"> 
+     <link rel="stylesheet" href="../assets/style/media.css"> 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Anna Kyrii</title>
-    <link rel="icon" type="image/png" href="assets/pic/00_general/logo_new.png">
+    <link rel="icon" type="image/png" href="../assets/pic/00_general/logo_new.png">
 </head>
 <body>
 <!-- <body class="no-scroll-y"> -->
@@ -36,7 +36,7 @@
             <div class="page__container">
                 <div class="page__nav-bar">
                     <div class="header__logo">
-                        <a href="/" class="header_logo-pic"><img src="assets/pic/00_general/logo_black.svg" class="header_logo-pic" alt="Anna Kyrii"></a>
+                        <a href="/" class="header_logo-pic"><img src="../assets/pic/00_general/logo_black.svg" class="header_logo-pic" alt="Anna Kyrii"></a>
                         <a href="/" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
                     </div>
                     <div class="header__menu menu">
@@ -142,42 +142,42 @@
                     <div class="section-wrapper about-us">
                         <div class="about-us__container"> 
                             <div class="emp-block">
-                                <img src="assets/pic/00_general/team/AK1.jpg" alt="" class="emp-block__photo">
+                                <img src="../assets/pic/00_general/team/AK1.jpg" alt="" class="emp-block__photo">
                                 <p class="emp-block__name"> Anna Kyrii </p>
                                 <p class="emp-block__position"> Owner </p>
                             </div>
                             <div class="emp-block">
-                                <img src="assets/pic/00_general/team/MS1.jpg" alt="" class="emp-block__photo">
+                                <img src="../assets/pic/00_general/team/MS1.jpg" alt="" class="emp-block__photo">
                                 <p class="emp-block__name"> Maryna Savchuk </p>
                                 <p class="emp-block__position"> CEO </p>
                             </div>
                             <div class="emp-block">
-                                <img src="assets/pic/00_general/team/AG1.JPG" alt="" class="emp-block__photo">
+                                <img src="../assets/pic/00_general/team/AG1.JPG" alt="" class="emp-block__photo">
                                 <p class="emp-block__name"> Alina Grigoryan </p>
                                 <p class="emp-block__position"> Chief Architect </p>
                             </div>
                             <div class="emp-block">
-                                <img src="assets/pic/00_general/team/MF1.jpg" alt="" class="emp-block__photo">
+                                <img src="../assets/pic/00_general/team/MF1.jpg" alt="" class="emp-block__photo">
                                 <p class="emp-block__name"> Maxym Fakas </p>
                                 <p class="emp-block__position"> Architect </p>
                             </div>
                             <div class="emp-block">
-                                <img src="assets/pic/00_general/team/TK1.jpg" alt="" class="emp-block__photo">
+                                <img src="../assets/pic/00_general/team/TK1.jpg" alt="" class="emp-block__photo">
                                 <p class="emp-block__name"> Tetiana Kozak </p>
                                 <p class="emp-block__position"> Architect </p>
                             </div>
                             <div class="emp-block">
-                                <img src="assets/pic/00_general/team/KB1.jpg" alt="" class="emp-block__photo">
+                                <img src="../assets/pic/00_general/team/KB1.jpg" alt="" class="emp-block__photo">
                                 <p class="emp-block__name"> Kateryna Bondarenko </p>
                                 <p class="emp-block__position"> Architect </p>
                             </div>
                             <div class="emp-block">
-                                <img src="assets/pic/00_general/team/VS1.jpg" alt="" class="emp-block__photo">
+                                <img src="../assets/pic/00_general/team/VS1.jpg" alt="" class="emp-block__photo">
                                 <p class="emp-block__name"> Viacheslav Sukhinov </p>
                                 <p class="emp-block__position"> Architect </p>
                             </div>
                             <div class="emp-block">
-                                <img src="assets/pic/00_general/team/SL1.jpg" alt="" class="emp-block__photo">
+                                <img src="../assets/pic/00_general/team/SL1.jpg" alt="" class="emp-block__photo">
                                 <p class="emp-block__name"> Shatalina Lidia </p>
                                 <p class="emp-block__position"> Account Manager </p>
                             </div>
@@ -339,7 +339,7 @@
             </div>
         </footer>
     </main>
-    <script src="assets/js/preloader.js"></script> 
-    <script src="assets/js/burger.js" ></script>
+    <script src="../assets/js/preloader.js"></script> 
+    <script src="../assets/js/burger.js" ></script>
 </body>
 </html>
