--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <nav class="menu__body">
                             <ul class="menu__list" >
                                 <li> <a data-goto=".page__projects" href="all-projects" class="menu__link __hover"> Проекти </a> </li>
-                                <li> <a data-goto=".page__about-us" href="about-us" class="menu__link __hover"> Про нас </a> </li>
+                                <li> <a data-goto=".page__about-us" href="pro-nas" class="menu__link __hover"> Про нас </a> </li>
                                 <li> <a data-goto=".page__contacts" href="contacts" class="menu__link __hover"> Контакти </a> </li>
                                 <li> <a href="en" class="__hover"> En </a> </li>
                                 <li>    
