translated pro-nas page in ua

--- a/en/about-us.html
+++ b/en/about-us.html
@@ -129,7 +129,7 @@
                             </div>
                             <div class="par-group">
                                 <p class="par"><span>What we don’t do</span></p>
-                                <p class="par">For the interior design projects of private houses and apartments it is better to contact another company We will be happy to give recommendations. Our specialists are focused on solving business tasks.</p>
+                                <p class="par">For the interior design projects of private houses and apartments, it is better to contact another company We will be happy to give recommendations. Our specialists are focused on solving business tasks.</p>
                             </div>                            
                             <div class="par-group">
                                 <p class="par"><span>Team</span></p>
@@ -178,7 +178,7 @@
                             </div>
                             <div class="emp-block">
                                 <img src="../assets/pic/00_general/team/SL1.jpg" alt="" class="emp-block__photo">
-                                <p class="emp-block__name"> Shatalina Lidia </p>
+                                <p class="emp-block__name"> Lidia Shatalina </p>
                                 <p class="emp-block__position"> Account Manager </p>
                             </div>
                         </div>
@@ -193,7 +193,7 @@
                                 <div class="years-wrapper">
                                     <div class="awards__block __first">
                                         <p class="awards__name"> Project of the year Fundermax 6.0 2021 </p>
-                                        <p class="award"> Project Title: Aquapark in Mukachevo, Zakarpattia region, Ukraine </p>
+                                        <p class="award"> Project Title: Water leisure center in Mukachevo, Zakarpattia region, Ukraine </p>
                                         <p class="award"> Nomination: Project of the year </p>
                                         <p class="award"> Award: Grand Prix exterrior </p>
                                     </div>
@@ -217,7 +217,7 @@
                                     </div>
                                     <div class="awards__block">
                                         <p class="awards__name"> Review-competition "Award of the National Union of Architects of Ukraine 2021" </p>
-                                        <p class="award"> Project Title: Reconstruction of non-residental buildings for the administrative and production complex, Kyiv, Ukraine </p>
+                                        <p class="award"> Project Title: Reconstruction of non-residential buildings for the administrative and production complex, Kyiv, Ukraine </p>
                                         <p class="award"> Nomination: Buildings, complexes and structures (project) </p>
                                         <p class="award"> Award: Laureate's diploma </p>
                                     </div>
