--- a/pro-nas.html
+++ b/pro-nas.html
@@ -46,7 +46,7 @@
                         <nav class="menu__body">
                             <ul class="menu__list" >
                                 <li> <a href="all-projects" class="__hover"> Проекти </a> </li>
-                                <li> <a href="about-us" class="projects-link __hover"> Про нас </a> </li>
+                                <li> <a href="pro-nas" class="projects-link __hover"> Про нас </a> </li>
                                 <li> <a href="contacts" class="__hover"> Контакти </a> </li>
                                 <li> <a href="en/about-us" class="__hover"> En </a> </li>
                                 <li> 
