translated kontakty page to ua. Fixed bugs in other pages

--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
                                     <p class="additional-text"> пов'язані з процесом проектування та розробки об'єктів архітектури 
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Розробка концептів 
-                                    <p class="additional-text"> з аналізом граничних параметрів забудови та ризик-карти 
+                                    <p class="main-text"> Розробка концепцій 
+                                    <p class="additional-text"> з аналізом граничних параметрів забудови та карти ризиків 
                                 </div>
                                 <div class="contacts__what-we-do-text">
                                     <p class="main-text"> Проектна документація 
@@ -265,7 +265,7 @@
                                 </div>
                                 <div class="contacts__what-we-do-text">
                                     <p class="main-text"> Проектна документація 
-                                    <p class="additional-text"> Передпроектні пропозиції, ескізний проект та робоча документація 
+                                    <p class="additional-text"> Передпроектні Пропозиції, Ескізний Проект, Робочий Проект та Робоча Документація
                                 </div>
                                 <div class="contacts__what-we-do-text">
                                     <p class="main-text"> Авторський нагляд за будівництвом
@@ -295,9 +295,9 @@
                                             <textarea id="inp-message" name="message" placeholder="Ваше повідомлення" class="input-field _req" rows="9" style="height: 144px;"></textarea>  
                                             <div class="input-error message-error"></div>                    
                                         </div> 
-                                        <p class="error-hiden">Please, complete all fields</p>
+                                        <p class="error-hiden"> Заповніть всі поля! </p>
                                         <button type="submit" class="contacts__submit"> Надіслати </button>
-                                        <p class="contacts__cotact-us-PP"> Натискаючи кнопку "Надіслати" ви погоджуєтесь з політикою конфіденційності </p>
+                                        <p class="contacts__cotact-us-PP"> Натискаючи кнопку, ви погоджуєтесь з політикою конфіденційності </p>
                                     </form>                    
                                 </div>             
                             </div>
