--- a/en/contacts.html
+++ b/en/contacts.html
@@ -7,14 +7,14 @@
     <meta name="description" content="Anna Kyrii Architectural Projecting Group">
     <meta name="keywords" content="architecture, project, projects, Anna Kyrii, architect, architectural group, architectural design">
     <meta name="author" content="Anna Kyrii Architectural Projecting Group">
-    <link rel="stylesheet" href="assets/style/preloader.css">
-    <link rel="stylesheet" href="assets/style/normalize.css">
-    <link rel="stylesheet" href="assets/style/style.css">
-    <link rel="stylesheet" href="assets/style/style_projects.css">
-    <link rel="stylesheet" href="assets/style/media.css">
+    <link rel="stylesheet" href="../assets/style/preloader.css">
+    <link rel="stylesheet" href="../assets/style/normalize.css">
+    <link rel="stylesheet" href="../assets/style/style.css">
+    <link rel="stylesheet" href="../assets/style/style_projects.css">
+    <link rel="stylesheet" href="../assets/style/media.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Anna Kyrii</title>
-    <link rel="icon" type="image/png" href="assets/pic/00_general/logo_new.png">
+    <link rel="icon" type="image/png" href="../assets/pic/00_general/logo_new.png">
 </head>
 <body>
 <!-- <body class="no-scroll-y"> -->
@@ -35,7 +35,7 @@
             <div class="page__container">
                 <div class="page__nav-bar">
                     <div class="header__logo">
-                        <a href="/" class="header_logo-pic"><img src="assets/pic/00_general/logo_black.svg" class="header_logo-pic" alt="Anna Kyrii"></a>
+                        <a href="/" class="header_logo-pic"><img src="../assets/pic/00_general/logo_black.svg" class="header_logo-pic" alt="Anna Kyrii"></a>
                         <a href="/" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
                     </div>
                     <div class="header__menu menu">
@@ -47,7 +47,7 @@
                                 <li> <a href="all-projects" class="__hover"> Projects </a> </li>
                                 <li> <a href="about-us" class="__hover"> About us </a> </li>
                                 <li> <a href="contacts" class="projects-link __hover"> Contacts </a> </li>
-                                <li> <a href="#" class="__hover"> Ua </a> </li>
+                                <li> <a href="../kontakty" class="__hover"> Ua </a> </li>
                                 <li> 
                                     <div class="menu__icons">
                                         <a href="https://www.google.com/maps/place/%D0%90%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%BD%D0%BE-%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%BD%D0%B0%D1%8F+%D0%B3%D1%80%D1%83%D0%BF%D0%BF%D0%B0+%D0%90%D0%BD%D0%BD%D1%8B+%D0%9A%D0%B8%D1%80%D0%B8%D0%B9/@50.4484759,30.497488,17z/data=!4m13!1m7!3m6!1s0x40d4cef54bbbd095:0x6af66acf0bb8b5a4!2z0LLRg9C70LjRhtGPINCe0LvQtdGB0Y8g0JPQvtC90YfQsNGA0LAsIDgyLCDQmtC40ZfQsiwgMDIwMDA!3b1!8m2!3d50.4484355!4d30.4971632!3m4!1s0x40d4cef54be8e5cf:0x181e795e2e17cacc!8m2!3d50.4484289!4d30.4973407" target="_blank" class="icon">
@@ -154,16 +154,16 @@
                         <p><a href="tel:+38-044-486-3536" class="contacts__details contacts__tel">tel: +38 (044) 486 35 36</a></p>
                     </div>
                     <div class="privacy-policy">
-                        <img src="assets/pic/00_general/logo_black.svg" class="privacy-policy__logo">
+                        <img src="../assets/pic/00_general/logo_black.svg" class="privacy-policy__logo">
                         <p class="privacy-policy__text" style="text-align: center;"> Privacy Policy </p>
                     </div>
                 </div>  
             </div>      
         </footer>
     </main>
-    <script src="assets/js/preloader.js"></script>
-    <script src="assets/js/contact-us_form.js" ></script>
-    <script src="assets/js/burger.js" ></script> 
-    <script src="assets/js/phone-mask.js"></script> 
+    <script src="../assets/js/preloader.js"></script>
+    <script src="../assets/js/contact-us_form.js" ></script>
+    <script src="../assets/js/burger.js" ></script> 
+    <script src="../assets/js/phone-mask.js"></script> 
 </body>
 </html>
