--- a/kontakty.html
+++ b/kontakty.html
@@ -44,10 +44,10 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a href="all-projects" class="__hover"> Projects </a> </li>
-                                <li> <a href="about-us" class="__hover"> About us </a> </li>
-                                <li> <a href="contacts" class="projects-link __hover"> Contacts </a> </li>
-                                <li> <a href="#" class="__hover"> Ua </a> </li>
+                                <li> <a href="vsi-proekty" class="__hover"> Проекти </a> </li>
+                                <li> <a href="pro-nas" class="__hover"> Про нас </a> </li>
+                                <li> <a href="kontakty" class="projects-link __hover"> Контакти </a> </li>
+                                <li> <a href="en/contacts" class="__hover"> En </a> </li>
                                 <li> 
                                     <div class="menu__icons">
                                         <a href="https://www.google.com/maps/place/%D0%90%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%BD%D0%BE-%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%BD%D0%B0%D1%8F+%D0%B3%D1%80%D1%83%D0%BF%D0%BF%D0%B0+%D0%90%D0%BD%D0%BD%D1%8B+%D0%9A%D0%B8%D1%80%D0%B8%D0%B9/@50.4484759,30.497488,17z/data=!4m13!1m7!3m6!1s0x40d4cef54bbbd095:0x6af66acf0bb8b5a4!2z0LLRg9C70LjRhtGPINCe0LvQtdGB0Y8g0JPQvtC90YfQsNGA0LAsIDgyLCDQmtC40ZfQsiwgMDIwMDA!3b1!8m2!3d50.4484355!4d30.4971632!3m4!1s0x40d4cef54be8e5cf:0x181e795e2e17cacc!8m2!3d50.4484289!4d30.4973407" target="_blank" class="icon">
@@ -88,52 +88,52 @@
                         <div class="contacts__container">
                             <div class="contacts__what-we-do">
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Consulting on any issues </p>
-                                    <p class="additional-text"> related to the process of design and development of architectural objects </p>
+                                    <p class="main-text"> Консультація з будь-яких питань </p>
+                                    <p class="additional-text">пов'язані з процесом проектування та розробки об'єктів архітектури </p>
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Development of concepts </p>
-                                    <p class="additional-text"> with the analysis of limit parameters of building and risk-map </p>
+                                    <p class="main-text"> Розробка концепцій </p>
+                                    <p class="additional-text"> з аналізом граничних параметрів забудови та карти ризиків </p>
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Project documentation </p>
-                                    <p class="additional-text"> Finding the best architectural and engineering solutions for the task</p>
+                                    <p class="main-text"> Проектна документація </p>
+                                    <p class="additional-text"> Пошук найкращих архітектурних та інженерних рішень для поставленого завдання </p>
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Project documentation </p>
-                                    <p class="additional-text"> Pre-project, Schematic Design, Project, Work Project and Working Documentation </p>
+                                    <p class="main-text"> Проектна документація </p>
+                                    <p class="additional-text"> Передпроектні Пропозиції, Ескізний Проект, Робочий Проект та Робоча Документація </p>
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Author's supervision of construction </p>
+                                    <p class="main-text"> Авторський нагляд за будівництвом </p>
                                 </div>
                             </div>
                             <div class="contacts__place-a-meeting">
                                 <div class="contacts__place-a-meeting-container">                    
                                     <form action="#" id="contacts__form" class="contacts__form">
-                                        <p class="contacts__cotact-us-title"> Contact us </p>
+                                        <p class="contacts__cotact-us-title"> Написати нам </p>
                                         <div class="contacts__input-block">
-                                            <label for="inp-name" class="input-label"> Name* </label>
-                                            <input id="inp-name" type="text" name="name" placeholder="Provide your name" class="input-field _req _name">
+                                            <label for="inp-name" class="input-label"> Ім'я* </label>
+                                            <input id="inp-name" type="text" name="name" placeholder="Ваше ім'я" class="input-field _req _name">
                                             <div class="input-error name-error"></div>
                                         </div> 
                                         <div class="contacts__input-block">
-                                            <label for="inp-phone" class="input-label"> Phone Number* </label>
-                                            <input id="inp-phone" type="text" name="phone" placeholder="Provide your phone number" class="input-field _req _phone"> 
+                                            <label for="inp-phone" class="input-label"> Номер телефону* </label>
+                                            <input id="inp-phone" type="text" name="phone" placeholder="Ваш номер телефону" class="input-field _req _phone"> 
                                             <div class="input-error phone-error"></div>
                                         </div> 
                                         <div class="contacts__input-block">
-                                            <label for="inp-email" class="input-label"> E-mail Address* </label>
-                                            <input id="inp-email" type="text" name="email" placeholder="Provide your e-mail" class="input-field _req _email">
+                                            <label for="inp-email" class="input-label"> E-mail* </label>
+                                            <input id="inp-email" type="text" name="email" placeholder="Ваш e-mail" class="input-field _req _email">
                                             <div class="input-error email-error"></div>
                                         </div> 
                                         <div class="contacts__input-block">
-                                            <label for="inp-message" class="input-label"> Message* </label>
-                                            <textarea id="inp-message" name="message" placeholder="Provide your message" class="input-field _req" rows="9" style="height: 144px;"></textarea>  
+                                            <label for="inp-message" class="input-label"> Повідомлення* </label>
+                                            <textarea id="inp-message" name="message" placeholder="Ваше повідомлення" class="input-field _req" rows="9" style="height: 144px;"></textarea>  
                                             <div class="input-error message-error"></div>                    
                                         </div> 
-                                        <p class="error-hiden">Please, complete all fields</p>
-                                        <button type="submit" class="contacts__submit"> Submit </button>
-                                        <p class="contacts__cotact-us-PP"> By pressing the submit button you agree with the privacy policy terms </p>
+                                        <p class="error-hiden"> Заповніть всі поля! </p>
+                                        <button type="submit" class="contacts__submit"> Надіслати </button>
+                                        <p class="contacts__cotact-us-PP"> Натискаючи кнопку, ви погоджуєтесь з політикою конфіденційності </p>
                                     </form>                    
                                 </div>             
                             </div>
@@ -149,9 +149,9 @@
             <div class="page__container">
                 <div class="footer__contact-info">
                     <div class="contacts">
-                        <p><a href="https://www.google.com/maps/place/%D0%90%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%BD%D0%BE-%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%BD%D0%B0%D1%8F+%D0%B3%D1%80%D1%83%D0%BF%D0%BF%D0%B0+%D0%90%D0%BD%D0%BD%D1%8B+%D0%9A%D0%B8%D1%80%D0%B8%D0%B9/@50.4484759,30.497488,17z/data=!4m13!1m7!3m6!1s0x40d4cef54bbbd095:0x6af66acf0bb8b5a4!2z0LLRg9C70LjRhtGPINCe0LvQtdGB0Y8g0JPQvtC90YfQsNGA0LAsIDgyLCDQmtC40ZfQsiwgMDIwMDA!3b1!8m2!3d50.4484355!4d30.4971632!3m4!1s0x40d4cef54be8e5cf:0x181e795e2e17cacc!8m2!3d50.4484289!4d30.4973407" class="contacts__details contacts__adress" id="contacts__adress" target="_blank">Of. 2-A, 82, O.Gonchara Str., <br> 01054, Kyiv, Ukraine</a></p>
+                        <p><a href="https://www.google.com/maps/place/%D0%90%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%BD%D0%BE-%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%BD%D0%B0%D1%8F+%D0%B3%D1%80%D1%83%D0%BF%D0%BF%D0%B0+%D0%90%D0%BD%D0%BD%D1%8B+%D0%9A%D0%B8%D1%80%D0%B8%D0%B9/@50.4484759,30.497488,17z/data=!4m13!1m7!3m6!1s0x40d4cef54bbbd095:0x6af66acf0bb8b5a4!2z0LLRg9C70LjRhtGPINCe0LvQtdGB0Y8g0JPQvtC90YfQsNGA0LAsIDgyLCDQmtC40ZfQsiwgMDIwMDA!3b1!8m2!3d50.4484355!4d30.4971632!3m4!1s0x40d4cef54be8e5cf:0x181e795e2e17cacc!8m2!3d50.4484289!4d30.4973407" class="contacts__details contacts__adress" id="contacts__adress" target="_blank"> вул.Олеся Гончара 82, офіс 2-A <br> 01054, Київ, Україна </a></p>
                         <p ><a href="mailto:in@kyrii-group.com.ua" class="contacts__details contacts__e-mail">in@kyrii-group.com.ua</a></p>
-                        <p><a href="tel:+38-044-486-3536" class="contacts__details contacts__tel">tel: +38 (044) 486 35 36</a></p>
+                        <p><a href="tel:+38-044-486-3536" class="contacts__details contacts__tel">тел: +38 (044) 486 35 36</a></p>
                     </div>
                     <div class="privacy-policy">
                         <img src="assets/pic/00_general/logo_black.svg" class="privacy-policy__logo">
