--- a/pro-nas.html
+++ b/pro-nas.html
@@ -45,9 +45,9 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a href="all-projects" class="__hover"> Проекти </a> </li>
+                                <li> <a href="vsi-proekty" class="__hover"> Проекти </a> </li>
                                 <li> <a href="pro-nas" class="projects-link __hover"> Про нас </a> </li>
-                                <li> <a href="contacts" class="__hover"> Контакти </a> </li>
+                                <li> <a href="kontakty" class="__hover"> Контакти </a> </li>
                                 <li> <a href="en/about-us" class="__hover"> En </a> </li>
                                 <li> 
                                     <div class="menu__icons">
