--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <div class="page__container">
                 <div class="page__nav-bar">
                     <div class="header__logo">
-                        <a data-goto=".page__content" href="/" class="header_logo-pic"><img src="assets/pic/00_general/logo_black.svg" class="header_logo-pic" alt="Anna Kyrii"></a>
-                        <a data-goto=".page__content" href="/" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
+                        <a data-goto=".page__content" href="index" class="header_logo-pic"><img src="assets/pic/00_general/logo_black.svg" class="header_logo-pic" alt="Anna Kyrii"></a>
+                        <a data-goto=".page__content" href="index" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
                     </div>
                     <div class="header__menu menu">
                         <div class="menu__icon">
@@ -48,9 +48,9 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a data-goto=".page__projects" href="all-projects" class="menu__link __hover"> Проекти </a> </li>
+                                <li> <a data-goto=".page__projects" href="vsi-proekty" class="menu__link __hover"> Проекти </a> </li>
                                 <li> <a data-goto=".page__about-us" href="pro-nas" class="menu__link __hover"> Про нас </a> </li>
-                                <li> <a data-goto=".page__contacts" href="contacts" class="menu__link __hover"> Контакти </a> </li>
+                                <li> <a data-goto=".page__contacts" href="kontakty" class="menu__link __hover"> Контакти </a> </li>
                                 <li> <a href="en" class="__hover"> En </a> </li>
                                 <li>    
                                     <div class="menu__icons">
@@ -168,7 +168,7 @@
                             </div>
                         </div>
                         <div class="project__more-projects more-btn">
-                            <a href="all-projects" class="more-btn-text"> Більше проектів </a>
+                            <a href="vsi-proekty" class="more-btn-text"> Більше проектів </a>
                         </div>
                     </div>
                 </div>
@@ -243,7 +243,7 @@
                             </div>
                         </div>
                         <div class="project__more-projects more-btn">
-                            <a href="about-us" class="more-btn-text">Про нас</a>                            
+                            <a href="pro-nas" class="more-btn-text">Про нас</a>                            
                         </div>                       
                     </div>
                 </div>
