--- a/en/project/warning.html
+++ b/en/project/warning.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Anna Kyrii Architectural Projecting Group">    
     <meta name="author" content="Anna Kyrii Architectural Projecting Group">
-    <link rel="stylesheet" href="../assets/style/normalize.css">
-    <link rel="stylesheet" href="../assets/style/style.css"> 
-    <link rel="stylesheet" href="../assets/style/media.css">
+    <link rel="stylesheet" href="../../assets/style/normalize.css">
+    <link rel="stylesheet" href="../../assets/style/style.css"> 
+    <link rel="stylesheet" href="../../assets/style/media.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Anna Kyrii</title>
-    <link rel="icon" type="image/png" href="../assets/pic/00_general/logo_new.png">
+    <link rel="icon" type="image/png" href="../../assets/pic/00_general/logo_new.png">
 </head>
 <body>
 <!-- <body class="no-scroll-y">
@@ -32,8 +32,8 @@
             <div class="page__container">
                 <div class="page__nav-bar">
                     <div class="header__logo">
-                        <a href="../en/" class="header_logo-pic"><img src="../assets/pic/00_general/logo_black.svg" class="header_logo-pic" alt="Anna Kyrii"></a>
-                        <a href="../en/" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
+                        <a href="../" class="header_logo-pic"><img src="../../assets/pic/00_general/logo_black.svg" class="header_logo-pic" alt="Anna Kyrii"></a>
+                        <a href="../" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
                     </div>
                     <div class="header__menu menu">
                         <div class="menu__icon">
@@ -41,10 +41,10 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a href="../en/all-projects" class="__hover"> Projects </a> </li>
-                                <li> <a href="../en/about-us" class="__hover"> About us </a> </li>
-                                <li> <a href="../en/contacts" class="__hover"> Contacts </a> </li>
-                                <li> <a href="poperedshenya" class="__hover"> Ua </a> </li>
+                                <li> <a href="../all-projects" class="__hover"> Projects </a> </li>
+                                <li> <a href="../about-us" class="__hover"> About us </a> </li>
+                                <li> <a href="../contacts" class="__hover"> Contacts </a> </li>
+                                <li> <a href="../../project/poperedshenya" class="__hover"> Ua </a> </li>
                                 <li> 
                                     <div class="menu__icons">
                                         <a href="https://www.google.com/maps/place/%D0%90%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%BD%D0%BE-%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%BD%D0%B0%D1%8F+%D0%B3%D1%80%D1%83%D0%BF%D0%BF%D0%B0+%D0%90%D0%BD%D0%BD%D1%8B+%D0%9A%D0%B8%D1%80%D0%B8%D0%B9/@50.4484759,30.497488,17z/data=!4m13!1m7!3m6!1s0x40d4cef54bbbd095:0x6af66acf0bb8b5a4!2z0LLRg9C70LjRhtGPINCe0LvQtdGB0Y8g0JPQvtC90YfQsNGA0LAsIDgyLCDQmtC40ZfQsiwgMDIwMDA!3b1!8m2!3d50.4484355!4d30.4971632!3m4!1s0x40d4cef54be8e5cf:0x181e795e2e17cacc!8m2!3d50.4484289!4d30.4973407" target="_blank" class="icon">
@@ -82,12 +82,12 @@
                         <h3> This page is under construction </h3>
                         <p> Our exciting new website will launch soon </p>
                         <p> Come back and check it out </p>
-                        <a href="../en/all-projects" class="prev-btn"> Previous page </a>
+                        <a href="../all-projects" class="prev-btn"> Previous page </a>
                     </div>
                 </div>                      
             </div>
         </section>
     </main> 
-    <script src="../assets/js/burger.js" ></script>
+    <script src="../../assets/js/burger.js" ></script>
 </body>
 </html>
