Fixed path to files

--- a/project/aquapark.html
+++ b/project/aquapark.html
@@ -47,9 +47,9 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a href="../all-projects" class="__hover"> Проекти </a> </li>
-                                <li> <a href="../about-us" class="__hover"> Про нас </a> </li>
-                                <li> <a href="../contacts" class="__hover"> Контакти </a> </li>
+                                <li> <a href="../vsi-proekty" class="__hover"> Проекти </a> </li>
+                                <li> <a href="../pro-nas" class="__hover"> Про нас </a> </li>
+                                <li> <a href="../kontakty" class="__hover"> Контакти </a> </li>
                                 <li> <a href="../en/project/aquapark" class="__hover"> En </a> </li>
                                 <li> 
                                     <div class="menu__icons">
