--- a/project/school-brovary.html
+++ b/project/school-brovary.html
@@ -47,10 +47,10 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a href="../all-projects" class="__hover"> Projects </a> </li>
-                                <li> <a href="../about-us" class="__hover"> About us </a> </li>
-                                <li> <a href="../contacts" class="__hover"> Contacts </a> </li>
-                                <li> <a href="#" class="__hover"> Ua </a> </li>
+                                <li> <a href="../vsi-proekty" class="__hover"> Проекти </a> </li>
+                                <li> <a href="../pro-nas" class="__hover"> Про нас </a> </li>
+                                <li> <a href="../kontakty" class="__hover"> Контакти </a> </li>
+                                <li> <a href="../en/project/school-brovary" class="__hover"> En </a> </li>
                                 <li> 
                                     <div class="menu__icons">
                                         <a href="https://www.google.com/maps/place/%D0%90%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%BD%D0%BE-%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%BD%D0%B0%D1%8F+%D0%B3%D1%80%D1%83%D0%BF%D0%BF%D0%B0+%D0%90%D0%BD%D0%BD%D1%8B+%D0%9A%D0%B8%D1%80%D0%B8%D0%B9/@50.4484759,30.497488,17z/data=!4m13!1m7!3m6!1s0x40d4cef54bbbd095:0x6af66acf0bb8b5a4!2z0LLRg9C70LjRhtGPINCe0LvQtdGB0Y8g0JPQvtC90YfQsNGA0LAsIDgyLCDQmtC40ZfQsiwgMDIwMDA!3b1!8m2!3d50.4484355!4d30.4971632!3m4!1s0x40d4cef54be8e5cf:0x181e795e2e17cacc!8m2!3d50.4484289!4d30.4973407" target="_blank" class="icon">
