changed Privacy Policy to Copyright

--- a/en/contacts.html
+++ b/en/contacts.html
@@ -155,7 +155,7 @@
                     </div>
                     <div class="privacy-policy">
                         <img src="../assets/pic/00_general/logo_black.svg" class="privacy-policy__logo">
-                        <p class="privacy-policy__text" style="text-align: center;"> Privacy Policy </p>
+                        <p class="privacy-policy__text" style="text-align: center;"> © Anna Kyrii APG </p>
                     </div>
                 </div>  
             </div>      
