--- a/en/about-us.html
+++ b/en/about-us.html
@@ -335,7 +335,7 @@
                 </a> 
             </div>
             <div class="footer__PP">
-                <p>privacy policy</p>
+                <p> © Anna Kyrii APG </p>
             </div>
         </footer>
     </main>
