--- a/en/all-projects.html
+++ b/en/all-projects.html
@@ -525,7 +525,7 @@
                         </a> 
                     </div>
                     <div class="footer__PP">
-                        <p>privacy policy</p>
+                        <p> © Anna Kyrii APG </p>
                     </div>
                 </footer>
             </div>
