--- a/en/index.html
+++ b/en/index.html
@@ -320,7 +320,7 @@
                 </div>
                 <div class="privacy-policy">
                     <img src="../assets/pic/00_general/logo_black.svg" class="privacy-policy__logo">
-                    <p class="privacy-policy__text" style="text-align: center;"> Privacy Policy 
+                    <p class="privacy-policy__text" style="text-align: center;"> © Anna Kyrii APG
                 </div>
             </div>  
         </div>      
