--- a/vsi-proekty.html
+++ b/vsi-proekty.html
@@ -525,7 +525,7 @@
                         </a> 
                     </div>
                     <div class="footer__PP">
-                        <p>privacy policy</p>
+                        <p> © Anna Kyrii APG </p>
                     </div>
                 </footer>
             </div>
