--- a/en/index.html
+++ b/en/index.html
@@ -39,8 +39,8 @@
             <div class="page__container">
                 <div class="page__nav-bar">
                     <div class="header__logo">
-                        <a data-goto=".page__content" href="/" class="header_logo-pic"><img src="../assets/pic/00_general/logo_black.svg" class="header_logo-pic" alt="Anna Kyrii"></a>
-                        <a data-goto=".page__content" href="/" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
+                        <a data-goto=".page__content" href="https://www.kyrii-group.com.ua/en/" class="header_logo-pic"><img src="../assets/pic/00_general/logo_black.svg" class="header_logo-pic" alt="Anna Kyrii"></a>
+                        <a data-goto=".page__content" href="https://www.kyrii-group.com.ua/en/" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
                     </div>
                     <div class="header__menu menu">
                         <div class="menu__icon">
