made shorter project names in Ukrainian

--- a/vsi-proekty.html
+++ b/vsi-proekty.html
@@ -125,7 +125,7 @@
                                 </div> 
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="project/nova-kakhovka" class="project__text"> Центр надання адміністративних послуг, Нова Каховка </a>
+                                    <a href="project/nova-kakhovka" class="project__text"> Центр адміністративних послуг, Нова Каховка </a>
                                 </div>
                             </div>
                             <div class="project__aquapark project__content leisure">
@@ -375,7 +375,7 @@
                                 </div>                                
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="project/poperedshenya" class="project__text"> Центр надання адміністративних послуг, Миколаїв </a>
+                                    <a href="project/poperedshenya" class="project__text"> Центр адміністративних послуг, Миколаїв </a>
                                 </div>
                             </div>
                             <div class="project__mazepy project__content public">
