--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                 </div> 
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="project/nova-kakhovka" class="project__text"> Центр надання адміністративних послуг, Нова Каховка </a>
+                                    <a href="project/nova-kakhovka" class="project__text"> Центр адміністративних послуг, Нова Каховка </a>
                                 </div>
                             </div>
                             <div class="project__aquapark project__content">
