--- a/contacts.html
+++ b/contacts.html
@@ -46,7 +46,7 @@
                             <ul class="menu__list" >
                                 <li> <a href="vsi-proekty" class="__hover"> Проекти </a> </li>
                                 <li> <a href="pro-nas" class="__hover"> Про нас </a> </li>
-                                <li> <a href="kontakty" class="projects-link __hover"> Контакти </a> </li>
+                                <li> <a href="contacts" class="projects-link __hover"> Контакти </a> </li>
                                 <li> <a href="en/contacts" class="__hover"> En </a> </li>
                                 <li> 
                                     <div class="menu__icons">
