--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <ul class="menu__list" >
                                 <li> <a data-goto=".page__projects" href="vsi-proekty" class="menu__link __hover"> Проекти </a> </li>
                                 <li> <a data-goto=".page__about-us" href="pro-nas" class="menu__link __hover"> Про нас </a> </li>
-                                <li> <a data-goto=".page__contacts" href="kontakty" class="menu__link __hover"> Контакти </a> </li>
+                                <li> <a data-goto=".page__contacts" href="contacts" class="menu__link __hover"> Контакти </a> </li>
                                 <li> <a href="en" class="__hover"> En </a> </li>
                                 <li>    
                                     <div class="menu__icons">
