--- a/project/kindergarten-zirochka.html
+++ b/project/kindergarten-zirochka.html
@@ -49,7 +49,7 @@
                             <ul class="menu__list" >
                                 <li> <a href="../vsi-proekty" class="__hover"> Проекти </a> </li>
                                 <li> <a href="../pro-nas" class="__hover"> Про нас </a> </li>
-                                <li> <a href="../kontakty" class="__hover"> Контакти </a> </li>
+                                <li> <a href="../contacts" class="__hover"> Контакти </a> </li>
                                 <li> <a href="../en/project/kindergarten-zirochka" class="__hover"> En </a> </li>
                                 <li> 
                                     <div class="menu__icons">
