--- a/vsi-proekty.html
+++ b/vsi-proekty.html
@@ -47,7 +47,7 @@
                             <ul class="menu__list" >
                                 <li> <a href="vsi-proekty" class="projects-link __hover"> Проекти </a> </li>
                                 <li> <a href="pro-nas" class="__hover"> Про нас </a> </li>
-                                <li> <a href="kontakty" class="__hover"> Контакти </a> </li>
+                                <li> <a href="contacts" class="__hover"> Контакти </a> </li>
                                 <li> <a href="en/all-projects" class="__hover"> En </a> </li>
                                 <li> 
                                     <div class="menu__icons">
